--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <title>Nano Banana Slides Prompter</title>
     <meta name="description" content="Generate optimized prompts for AI-powered slide generation with Nano Banana Pro" />
   </head>
